Correcting collapse menu size and adding gallery

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ html, body{
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     list-style: none;
     z-index: 3;
-    width: 95%;
+    width: 90%;
     bottom: 5%;
     display: block;
     color: white;
@@ -242,6 +242,7 @@ html, body{
     outline: inset rgb(252, 223, 193) 10px;
     top: 0px;
     transform: scale(0.9);
+    transition: 1.5s;
     float: right;
   }
 
@@ -320,6 +321,48 @@ html, body{
 
   #photo4:hover{
     transform: scale(1);
+  }
+
+  #photo5{
+    position: relative;
+    width: 33.3333%;
+    transition: 1.5s;
+    float: left;
+    transform: scale(1);
+    z-index: 1;
+  }
+
+  #photo5:hover{
+    z-index: 2;
+    transform: scale(1.1);
+  }
+
+  #photo6{
+    position: relative;
+    width: 33.3333%;
+    transition: 1.5s;
+    float: left;
+    transform: scale(1);
+    z-index: 1;
+  }
+
+  #photo6:hover{
+    z-index: 2;
+    transform: scale(1.1);
+  }
+
+  #photo7{
+    position: relative;
+    width: 33.3333%;
+    transition: 1.5s;
+    float: left;
+    transform: scale(1);
+    z-index: 1;
+  }
+
+  #photo7:hover{
+    z-index: 2;
+    transform: scale(1.1);
   }
   
   
@@ -430,7 +473,7 @@ html, body{
     margin-left: 5%;
     margin-right: 55%;
     outline: inset rgb(252, 223, 193) 10px;
-    transition: 1.5s;
+    transition: 1s;
     transform: scale(0.9);
     margin-top: 10vmax;
   }
@@ -444,7 +487,7 @@ html, body{
     width: 40%;
     margin-left: 25%;
     outline: inset rgb(252, 223, 193) 10px;
-    transition: 1.5s;
+    transition: 1s;
     transform: scale(0.9);
   }
 
@@ -457,7 +500,7 @@ html, body{
     width: 40%;
     margin-left: 45%;
     outline: inset rgb(252, 223, 193) 10px;
-    transition: 1.5s;
+    transition: 1s;
     transform: scale(0.9);
   }
 
@@ -493,8 +536,16 @@ html, body{
     float: right;
     width: 6vmin;
     margin-right: 1%;
-    margin-top: 0%;
+    margin-top: 0.5%;
+    padding: 10px;
+    background-color: rgba(187, 148, 108, 0.0);
+    border: 2px solid rgba(187, 148, 108, 1);
+    transition: 1s;
   }
+
+ #menu-collapse-icon:hover{
+   background-color: rgba(187, 148, 108, 1);
+ }
 
   #menu-collapse-icon-close{
     position: relative;
@@ -504,6 +555,14 @@ html, body{
     width: 6vmin;
     margin-right: 5%;
     margin-top: 5%;
+    padding: 10px;
+    background-color: rgba(187, 148, 108, 0.0);
+    border: 2px solid rgba(187, 148, 108, 1);
+    transition: 1s;
+  }
+
+  #menu-collapse-icon-close:hover{
+    background-color: rgba(187, 148, 108, 1);
   }
 
   #menu-collapse{
@@ -520,20 +579,38 @@ html, body{
     visibility: hidden;
     transition: 0.6s;
     line-height: 8vmin;
-    z-index: 10;
+    z-index: 2;
   }
 
   #menu-collapse ul{
     list-style: none;
     padding: 0;
     margin: 0;
-    margin-top: 50px;
+    margin-top: 100px;
     margin-left: 5%;
     width: 90%;
   }
 
   #menu-collapse li{
     border-bottom: solid 1px rgb(189, 189, 189);
+  }
+
+  .scroll-down{
+    position: absolute;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    width: 5%;
+    top: 80vmin;
+    z-index: 2;
+    animation: 1s scrollDown infinite alternate;
+  }
+
+  @keyframes scrollDown{
+    0% {margin-top: 0vmin;}
+    100% {margin-top: 2vmin;}
   }
 
 
@@ -547,6 +624,7 @@ html, body{
   width: 100%;
   margin-left: 0%;
   margin-right: 0%;
+  height: 18vmin;
 }
 
 #desktop-navbar-elements{
@@ -707,29 +785,19 @@ html, body{
 }
 
 #menu-collapse{
-  position: absolute;
-  display: block;
-  right: 0px;
-  top: 13.2vmin;
-  background-color: black;
-  color: white;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  width: 50vmin;
-  height: 75vmin;
-  font-size: 2.5vmax;
-  filter: opacity(0);
-  visibility: hidden;
-  transition: 1s;
-  line-height: 12vmin;
-  z-index: 10;
+  top: 18vmin;
+  width: 60vmin;
+  height: 110vmin;
+  font-size: 4vmax;
+  line-height: 20vmin;
 }
 
 #menu-collapse ul{
   list-style: none;
   padding: 0;
   margin: 0;
-  margin-top: 50px;
-  margin-left: 5%;
+  margin-top: 15vmax;
+  margin-left: 10%;
   width: 90%;
 }
 
@@ -738,24 +806,47 @@ html, body{
 }
 
 #menu-collapse-icon{
-  width: 9vmin;
+  width: 12vmin;
 }
 
 #menu-collapse-icon-close{
-  width: 9vmin;
+  width: 12vmin;
 }
 
 #nightday-mode{
   position: absolute;
   z-index: 5;
   top: 50px;
-  margin-top: 10%;
+  margin-top: 15%;
   right: 1%;
   transform: rotate(0deg);
   display: block;
   width: 10%;
   filter: saturate(0) opacity(0.5);
   transition: 1s;
+}
+
+.scroll-down{
+  position: absolute;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  width: 12%;
+  top: 140vmin;
+}
+
+#photo5{
+  width: 100%;
+}
+
+#photo6{
+  width: 100%;
+}
+
+#photo7{
+  width: 100%;
 }
 
 }
